syntax = "proto3";

package api.advanced_coupon.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/advanced_coupon/v1;v1";

// AdvancedCouponService 定义了高级优惠券服务接口
service AdvancedCouponService {
  // 创建优惠券
  rpc CreateCoupon(CreateCouponRequest) returns (CreateCouponResponse);

  // 获取优惠券
  rpc GetCoupon(GetCouponRequest) returns (GetCouponResponse);

  // 获取优惠券列表
  rpc ListCoupons(ListCouponsRequest) returns (ListCouponsResponse);

  // 使用优惠券
  rpc UseCoupon(UseCouponRequest) returns (UseCouponResponse);

  // 计算最优优惠组合
  rpc CalculateBestDiscount(CalculateBestDiscountRequest) returns (CalculateBestDiscountResponse);
}

// Coupon 优惠券信息
message Coupon {
  uint64 id = 1;
  string code = 2;
  string type = 3; // percentage, fixed, free_shipping
  int64 discount_value = 4;
  int64 min_purchase_amount = 5;
  int64 max_discount_amount = 6;
  google.protobuf.Timestamp valid_from = 7;
  google.protobuf.Timestamp valid_until = 8;
  int64 total_quantity = 9;
  int64 used_quantity = 10;
  int64 per_user_limit = 11;
  string status = 12; // active, inactive, revoked, expired
}

// CreateCouponRequest 创建优惠券请求
message CreateCouponRequest {
  string code = 1;
  string type = 2;
  int64 discount_value = 3;
  google.protobuf.Timestamp valid_from = 4;
  google.protobuf.Timestamp valid_until = 5;
  int64 total_quantity = 6;
}

// CreateCouponResponse 创建优惠券响应
message CreateCouponResponse {
  Coupon coupon = 1;
}

// GetCouponRequest 获取优惠券请求
message GetCouponRequest {
  uint64 id = 1;
}

// GetCouponResponse 获取优惠券响应
message GetCouponResponse {
  Coupon coupon = 1;
}

// ListCouponsRequest 获取优惠券列表请求
message ListCouponsRequest {
  string status = 1;
  uint32 page_size = 2;
  uint32 page_num = 3;
}

// ListCouponsResponse 获取优惠券列表响应
message ListCouponsResponse {
  repeated Coupon coupons = 1;
  uint64 total_count = 2;
}

// UseCouponRequest 使用优惠券请求
message UseCouponRequest {
  uint64 user_id = 1;
  string code = 2;
  uint64 order_id = 3;
}

// UseCouponResponse 使用优惠券响应
message UseCouponResponse {
  bool success = 1;
}

// CalculateBestDiscountRequest 计算最优优惠组合请求
message CalculateBestDiscountRequest {
  int64 order_amount = 1;
  repeated uint64 coupon_ids = 2;
}

// CalculateBestDiscountResponse 计算最优优惠组合响应
message CalculateBestDiscountResponse {
  repeated uint64 best_coupon_ids = 1;
  int64 final_price = 2;
  int64 discount_amount = 3;
}
